--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -4,21 +4,21 @@
 
 <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-toggle="dropdown"
-       href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
+       href="#" role="button" aria-haspopup="true" aria-expanded="false">@Localizer["Account"]</a>
     <div class="dropdown-menu">
         @if (SignInManager.IsSignedIn(User))
         {
             <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity.Name</a>
             <div class="dropdown-divider"></div>
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="dropdown-item">Logout</button>
+                <button type="submit" class="dropdown-item">@Localizer["Logout"]</button>
             </form>
         }
         else
         {
-            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Register</a>
+    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">@Localizer["Register"]</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Login">@Localizer["Login"]</a>
         }
     </div>
 
