Add application user

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
+﻿@model IEnumerable<Microsoft.AspNetCore.Identity.ApplicationUser>
 
 @{
     ViewData["Title"] = "Admin'ochka";
