--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     <div class="dropdown-menu">
         @if (SignInManager.IsSignedIn(User))
         {
-            <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@User.Identity.Name</a>
+            <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Index" asp-route-userId="@null" title="Manage">@User.Identity.Name</a>
             <div class="dropdown-divider"></div>
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="dropdown-item">@Localizer["Logout"]</button>
