Add book adding

--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -46,5 +46,5 @@
 
         </tbody>
     </table>
-    <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="AddBook">Add new</a>
+    <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="AddBook" asp-route-userId ="@ViewBag.UserId">Add new</a>
 </body>
