--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -39,7 +39,7 @@
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        @Html.ActionLink("Delete", "DeleteBook", new { bookId = item.Id })
                     </td>
                 </tr>
             }
