--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -37,7 +37,7 @@
                         @Html.DisplayFor(modelItem => item.UpdateDate)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "EditBook", new { book = item }) |
+                        @Html.ActionLink("Edit", "EditBook", new { bookId = item.Id }) |
                         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Delete", "DeleteBook", new { bookId = item.Id })
                     </td>
