--- a/Views/Account/AddBook.cshtml
+++ b/Views/Account/AddBook.cshtml
@@ -43,7 +43,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" asp-route-userId="@ViewBag.UserId">Back to List</a>
     </div>
 
 </body>
