--- a/Views/Account/EditTitle.cshtml
+++ b/Views/Account/EditTitle.cshtml
@@ -55,7 +55,7 @@
                 maxTags: 10,
                 dropdown: {
                     maxItems: 20,           // <- mixumum allowed rendered suggestions
-                    classname: "form-control", // <- custom classname for this dropdown, so it could be targeted
+                    classname: "add-tag-to-support-dark", // <- custom classname for this dropdown, so it could be targeted
                     enabled: 0,             // <- show suggestions on focus
                     closeOnSelect: false    // <- do not hide the suggestions dropdown once an item has been selected
                 }
