--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,6 +41,11 @@
         <h1 class="display-4">Welcome</h1>
         <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     </div>
+
+    @if (Context.User.Identity.IsAuthenticated)
+    {
+
+    }
 </body>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/js/tagify.min.js"></script>
