--- a/Views/Home/ReadBook.cshtml
+++ b/Views/Home/ReadBook.cshtml
@@ -13,13 +13,13 @@
                asp-route-chapterNum="@(Model.CurrentPage - 1)" class="btn btn-primary">Prev</a>
         }
         <form asp-action="ReadBook">
-            <input type="hidden" name="bookId" value="@ViewBag.BookId">
+            <input type="hidden" name="bookId" id="bookIdField" value="@ViewBag.BookId">
             <div class="input-group">
-                <input type="text" name="chapterNum" value="@Model.CurrentPage">
+                <input type="text" name="chapterNum" id="chapterNumField" value="@Model.CurrentPage">
                 <div class="input-group-append">
                     <span class="input-group-text">/@Model.TotalPages</span>
                 </div>
-            </div>            
+            </div>
         </form>
         @if (Model.HasNextPage)
         {
@@ -27,8 +27,43 @@
                asp-route-chapterNum="@(Model.CurrentPage + 1)" class="btn btn-primary">Next</a>
         }
     </div>
-
+    @if (Context.User.Identity.IsAuthenticated)
+    {
+        <label class="btn btn-info">
+            <input type="checkbox" id="like" checked="@Model.Liked" autocomplete="off"> Like
+        </label>
+    }
     <div>
         <a asp-action="Index">Back to List</a>
     </div>
+
 </body>
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script>
+
+    $('#like').change(function () {
+        var data = { bookId: $('#bookIdField').val(), chapterNum: $('#chapterNumField').val() };
+        $.ajax({
+        type: "POST",
+        url: '@Url.Action("LikeClick", "Home")',
+        contentType: 'application/x-www-form-urlencoded',
+        data: data,
+        success: function (result) {
+            console.log(result);
+        }
+        })
+    })
+</script>
+
+
+@*$.ajax({
+    type: "POST",
+    url: '@Url.Action("ChangeChaptersOrder", "Account")',
+    contentType: 'application/x-www-form-urlencoded',
+    data: data,
+    success: function (result) {
+    SortChaptersList();
+    console.log(result);
+    }
+    })*@
