--- a/Views/Account/AddBook.cshtml
+++ b/Views/Account/AddBook.cshtml
@@ -5,6 +5,11 @@
 </head>
 
 <body>
+    <style>
+        .tagify__dropdown__item {
+            color: black;
+        }
+    </style>
 
     <h4>Book</h4>
     <hr />
