--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
                         </li>
                         <partial name="_SelectCulturePartial" />
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="text" placeholder="@Localizer["Search"]">
+                    <form asp-area="" asp-controller="Home" asp-action="Search" class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" name="text" type="text" placeholder="@Localizer["Search"]">
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">@Localizer["Search"]</button>
                     </form>
                     
@@ -65,11 +65,6 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - @Localizer["CourseWork"] - <a asp-area="" asp-controller="Home" asp-action="Privacy">@Localizer["Privacy"]</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
