--- a/Views/Account/EditTitle.cshtml
+++ b/Views/Account/EditTitle.cshtml
@@ -3,6 +3,20 @@
     <head>
         <link rel="stylesheet" href="~/css/tagify.css">
     </head>
+    <style>
+        h3 {
+            color: grey;
+        }
+
+        #bloc {
+            border: solid;
+            border-color: grey;
+        }
+
+        .tagify__dropdown__item {
+            color: black;
+        }
+    </style>
 
 
     <body>
