--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,51 +1,85 @@
 ﻿@model IEnumerable<CourseWork.Models.Book>
 
 <body>
+    <h3>@Localizer["User Info"]</h3>
+    <div>
+        <form asp-action="EditUser">
+            <input type="hidden" name="userId" value="@ViewBag.UserId" />
+            <div class="form-group">
+                <label class="control-label">@Localizer["Email"]</label>
+                <input value='@ViewBag.User.Email' class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label class="control-label">@Localizer["Username"]</label>
+                <input name="username" value='@ViewBag.User.UserName' class="form-control" />
+            </div>
+            <div class="form-group">
+                <label class="control-label">@Localizer["Phone"]</label>
+                <input name="phone" class="form-control" value='@ViewBag.User.PhoneNumber' />
+            </div>
+            <button type="submit" class="btn btn-secondary">@Localizer["Save"]</button>
+        </form>
+    </div>
 
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Genre)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.UploadDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.UpdateDate)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    <p></p>
+    <h3>@Localizer["Books"]</h3>
+    <div>
+        <table class="table table-hover tablesorter" id="booksTable">
+            <thead>
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Genre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.UploadDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.UpdateDate)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit chapters", "EditBook", new { bookId = item.Id }) |
-                        @Html.ActionLink("Edit", "EditTitle", new { bookId = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "DeleteBook", new { bookId = item.Id })
-                    </td>
+                    <th>
+                        @Localizer["Name"]
+                    </th>
+                    <th>
+                        @Localizer["Genre"]
+                    </th>
+                    <th>
+                        @Localizer["Upload date"]
+                    </th>
+                    <th>
+                        @Localizer["Update date"]
+                    </th>
+                    <th></th>
                 </tr>
-            }
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td class="name">
+                            <a asp-area="" asp-controller="Home" asp-action="ReadBook" asp-route-bookId="@item.Id">@item.Name</a>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Genre)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.UploadDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.UpdateDate)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit chapters", "EditBook", new { bookId = item.Id }) |
+                            @Html.ActionLink("Edit", "EditTitle", new { bookId = item.Id }) |
+                            @Html.ActionLink("Delete", "DeleteBook", new { bookId = item.Id, userId = ViewBag.UserId })
+                        </td>
+                    </tr>
+                }
 
-        </tbody>
-    </table>
-    <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="AddBook" asp-route-userId ="@ViewBag.UserId">Add new</a>
+            </tbody>
+        </table>
+        <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="AddBook" asp-route-userId="@ViewBag.UserId">Add new</a>
+    </div>
+    @if (Context.User.IsInRole("admin"))
+    {
+        <div>
+            <p></p>
+            <a class="btn btn-danger" asp-area="" asp-controller="Admin" asp-action="Index">@Localizer["Admin view"]</a>
+        </div>
+    }
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/jquery.tablesorter.min.js"></script>
+    <script>
+        $("#booksTable").tablesorter();
+    </script>
 </body>
