--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -2,7 +2,7 @@
     <h3>Search results: </h3>
     @foreach (var book in ViewBag.FoundBooks)
     {
-        <h5><a asp-action="ReadBook" asp-route-bookId="@book.Id">@book.Name | @book.AverageRating&#9957</a></h5>
+        <h5><a asp-action="Contents" asp-route-bookId="@book.Id">@book.Name | @book.AverageRating&#9957</a></h5>
         <p>@book.Description</p>
     }
 
